erDiagram
    USER ||--o{ ASSESSMENT : "has"
    USER ||--|| RESUME : "owns"
    USER ||--o{ COVERLETTER : "generates"
    USER ||--o{ RESUMEANALYSIS : "runs"
    USER ||--o{ CHAT : "starts"
    USER }|--|| INDUSTRYINSIGHT : "belongs_to"
    INDUSTRYINSIGHT ||--o{ USER : "for"
    CHAT ||--o{ MESSAGE : "contains"
    ASSESSMENT }|--|| USER : "by"
    RESUME }|--|| USER : "by"
    COVERLETTER }|--|| USER : "by"
    RESUMEANALYSIS }|--|| USER : "by"
    MESSAGE }|--|| CHAT : "in"
    
    USER {
        string id PK
        string clerkUserId UK
        string email UK
        string name
        string imageUrl
        string industry FK
        string[] skills
        int experience
        string bio
    }
    ASSESSMENT {
        string id PK
        string userId FK
        float quizScore
        json[] questions
        string category
        string improvementTip
        string title
    }
    RESUME {
        string id PK
        string userId FK,UK
        string content
        float atsScore
        string feedback
    }
    COVERLETTER {
        string id PK
        string userId FK
        string content
        string jobDescription
        string companyName
        string jobTitle
        string status
    }
    RESUMEANALYSIS {
        string id PK
        string userId FK
        string resumeUrl
        string companyName
        string jobTitle
        string jobDescription
        float overallScore
        float atsScore
        string[] matchedSkills
        string[] missingSkills
        json aiFeedback
    }
    INDUSTRYINSIGHT {
        string id PK
        string industry UK
        json salaryRanges
        json marketOutlook
        json industryTrends
        json topSkills
        int growthScore
    }
    CHAT {
        string id PK
        string userId FK
        string title
    }
    MESSAGE {
        string id PK
        string chatId FK
        string content
        enum role
    }

